# ticktick-mcp

./: .gitignore  .ws-sync  API_EXAMPLES.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI-CLI.md  GEMINI.md  Makefile  README.md  VENDOR-API.md  gapp.yaml  get_token.py  pyproject.toml  server-stdio.py  server.py  start-server.sh
.gemini/: settings.json
docs/: CLAUDE-CODE.md  CONTRIBUTING.md  GEMINI-CLI.md  GEMINI.md  INTEGRATION-TESTING.md  TOOLS.md  VENDOR-API.md
docs/planned/: SOVEREIGNTY.md
scripts/: get_token.py  start-server.sh  test_integration_simple.py
tests/framework/: conftest.py  test_framework.py
tests/unit/: conftest.py  test_api_client.py  test_archiver.py  test_cli.py  test_config.py  test_mcp_tools.py  test_security.py  test_server.py  test_tasks_delete.py
tests/unit/sdk/: test_projects.py  test_sdk_facade.py  test_tasks.py
ticktick/: __init__.py  auth.py  cli.py  config.py
ticktick/mcp/: __init__.py  server.py  tools.py
ticktick/sdk/: __init__.py  archiver.py  client.py  projects.py  security.py  tasks.py
ticktick/sdk/resources/: settings-manifest.yaml
