[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ticktick-access"
version = "0.2.0"
description = "CLI and MCP Server for TickTick task management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "httpx",
    "mcp",
    "pydantic",
    "pyyaml>=6.0",
    "requests",
]

[project.scripts]
ticktick = "ticktick.cli:cli"
ticktick-mcp = "ticktick.mcp.server:run_server"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ticktick*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501", # Line too long (handled by formatter)
]
