[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ticktick-access"
version = "0.5.0"
description = "CLI and MCP Server for TickTick task management, built on mcp-app"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "httpx>=0.25",
    "mcp-app @ git+https://github.com/echomodel/mcp-app.git",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pyjwt>=2.0",
    "respx>=0.21",
    "ruff",
]

[project.scripts]
ticktick = "ticktick.cli:cli"
ticktick-mcp = "ticktick:app.mcp_cli"
ticktick-admin = "ticktick:app.admin_cli"

[project.entry-points."mcp_app.apps"]
ticktick = "ticktick:app"

[project.urls]
Homepage = "https://github.com/krisrowe/ticktick-mcp"
Repository = "https://github.com/krisrowe/ticktick-mcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["ticktick*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/integration"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "C",
    "B",
]
ignore = [
    "E501",
]
